<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My First App</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_search">search</string>
    <string name="action_back">back</string>
    <string name="artist">艺术家</string>
    <string name="album">场所</string>
    <string name="query_btn">查询</string>
    <string name="custID_label">customerID</string>
    <string name="custName_label">customerName</string>
    <string name="siteName_label">siteName</string>
    <string name="pageNo_label">pageNo</string>
    <string name="pageSize_label">pageSize</string>
    <string name="custID_hint">请输入customerID</string>
    <string name="custName_hint">请输入customerName</string>
    <string name="siteName_hint">请输入siteName</string>
    <string name="pageNo_hint">请输入pageNo</string>
    <string name="pageSize_hint">请输入pageSize</string>
    <string name="result_page_name">查询结果</string>
     <string name="setting_first">设置1</string>
     <string name="setting_second">设置2</string>

</resources>