<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:myFirstApp="http://schemas.android.com/apk/res-auto" >

    <!-- Search, should appear as action button -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/action_search"
        android:imeOptions="actionSearch"
        android:iconifiedByDefault="true"
        android:inputType="textCapWords"
        myFirstApp:actionViewClass="android.support.v7.widget.SearchView"
        myFirstApp:showAsAction="ifRoom|collapseActionView"/>
    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_settings"
        myFirstApp:showAsAction="always">
        <menu>
            <item
                android:id="@+id/setting_first"
                android:title="@string/setting_first"/>
            <item
                android:id="@+id/setting_second"
                android:title="@string/setting_second"/>
        </menu>
    </item>

</menu>